Mon Nov 12 13:53:06 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* misc/ruby-mode.el (ruby-parse-partial): handle stringified
	  symbols properly using ruby-forward-string.

Mon Nov 12 12:38:31 2007  Tanaka Akira  <akr@fsij.org>

	* Makefile.in (lex.c): don't remove lex.c at first.

Fri Nov  9 07:26:04 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* random.c: update MT URL.[ruby-core:13305].

Wed Nov  7 03:32:38 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rexml/encodings/SHIFT-JIS.rb (REXML::Encoding): place -x for
	  nkf conversion.  a patch from <moonwolf AT moonwolf.com>.
	  [ruby-dev:32183]

Mon Nov  5 05:17:04 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser::Switch::summarize): fix for long form
	  option with very long argument.  a patch from Kobayashi Noritada
	  <nori1 AT dolphin.c.u-tokyo.ac.jp> in [ruby-list:44179].

Mon Nov  5 01:20:33 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (call_args): remove "parenthesize argument(s) for future
	  version" warning.  when I added this warning, I had a plan to
	  reimplement the parser that is simpler than the current one.
	  since we abandoned the plan, warning no longer required.

Fri Nov  2 00:13:51 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_assoc): check and convert inner arrays (assocs)
	  using #to_ary.

	* hash.c (rb_hash_s_create): check and convert argument hash
	  using #to_hash.

	* hash.c (rb_hash_s_create): Hash#[] now takes assocs as source of
	  hash conversion.

Thu Nov  1 23:47:43 2007  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (DRbTCPSocket): Improving with multiple network
	  interface.

	* test/drb/drbtest.rb: ditto.

Fri Oct 26 17:14:14 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (fix_pow): returns 1.0 for 0**0.0.

	* numeric.c (fix_pow): returns infinity for 0**-1.  [ruby-dev:32084]

Wed Oct 25 07:18:09 2007  James Edward Gray II  <jeg2@ruby-lang.org>
