@@ -1,3 +1,8 @@
+Mon Nov 12 16:52:29 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/mkmf.rb (create_makefile): rdoc about srcprefix.  a patch from
+	  Daniel Berger <djberg96 AT gmail.com> in [ruby-core:13378].
+
 Mon Nov 12 13:53:06 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* misc/ruby-mode.el (ruby-parse-partial): handle stringified
